--- a/app/src/main/res/layout/character_view.xml
+++ b/app/src/main/res/layout/character_view.xml
@@ -101,8 +101,9 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
+        style="@android:style/Widget.Material.ScrollView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="400dp"
         android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -165,32 +166,27 @@
 
                     <ImageButton
                         android:id="@+id/character_view_subtract_health"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginTop="-30dp"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginStart="10dp"
                         android:background="#00FFFFFF"
-                        android:scaleX=".25"
-                        android:scaleY=".25"
+                        android:scaleType="fitCenter"
                         android:src="@drawable/disadvantage"
-                        app:layout_constraintStart_toEndOf="@id/character_view_health_text"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintStart_toEndOf="@id/character_view_max_health"
+                        app:layout_constraintTop_toTopOf="@id/character_view_health_text" />
 
                     <ImageButton
                         android:id="@+id/character_view_add_health"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="35dp"
-                        android:layout_marginTop="-30dp"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginStart="10dp"
                         android:background="#00372C2C"
-                        android:scaleX=".25"
-                        android:scaleY=".25"
+                        android:scaleType="fitCenter"
                         android:src="@drawable/advantage"
-                        app:layout_constraintStart_toEndOf="@id/character_view_current_health"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintStart_toEndOf="@id/character_view_subtract_health"
+                        app:layout_constraintTop_toTopOf="@id/character_view_max_health" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
-
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
@@ -620,14 +616,213 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/skills_card"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="25dp">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/skills_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content">
 
+                    <TextView
+                        android:id="@+id/skills_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="10dp"
+                        android:text="Skills"
+                        android:textSize="25sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/acrobatics"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="Acrobatics"
+                        android:textSize="22sp"
+                        app:layout_constraintStart_toStartOf="@id/skills_text"
+                        app:layout_constraintTop_toBottomOf="@id/skills_text" />
+
+                    <TextView
+                        android:id="@+id/animal_handling"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="Animal Handling"
+                        android:textSize="22sp"
+                        app:layout_constraintStart_toStartOf="@id/skills_text"
+                        app:layout_constraintTop_toBottomOf="@id/acrobatics" />
+
+                    <TextView
+                        android:id="@+id/arcana"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="Arcana"
+                        android:textSize="22sp"
+                        app:layout_constraintStart_toStartOf="@id/skills_text"
+                        app:layout_constraintTop_toBottomOf="@id/animal_handling" />
+
+                    <TextView
+                        android:id="@+id/athletics"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="Athletics"
+                        android:textSize="22sp"
+                        app:layout_constraintStart_toStartOf="@id/skills_text"
+                        app:layout_constraintTop_toBottomOf="@+id/arcana" />
+
+                    <TextView
+                        android:id="@+id/deception"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="Deception"
+                        android:textSize="22sp"
+                        app:layout_constraintStart_toStartOf="@id/skills_text"
+                        app:layout_constraintTop_toBottomOf="@+id/athletics" />
+
+                    <TextView
+                        android:id="@+id/history"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="History"
+                        android:textSize="22sp"
+                        app:layout_constraintStart_toStartOf="@id/skills_text"
+                        app:layout_constraintTop_toBottomOf="@id/deception" />
+
+                    <TextView
+                        android:id="@+id/insight"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="Insight"
+                        android:textSize="22sp"
+                        app:layout_constraintStart_toStartOf="@id/skills_text"
+                        app:layout_constraintTop_toBottomOf="@id/history" />
+
+                    <TextView
+                        android:id="@+id/intimidation"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="Intimidation"
+                        android:textSize="22sp"
+                        app:layout_constraintStart_toStartOf="@id/skills_text"
+                        app:layout_constraintTop_toBottomOf="@id/insight" />
+
+                    <TextView
+                        android:id="@+id/investigation"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="Investigation"
+                        android:textSize="22sp"
+                        app:layout_constraintStart_toStartOf="@id/skills_text"
+                        app:layout_constraintTop_toBottomOf="@id/intimidation" />
+
+                    <TextView
+                        android:id="@+id/medicine"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginEnd="10dp"
+                        android:text="Medicine"
+                        android:textSize="22sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/skills_text" />
+
+                    <TextView
+                        android:id="@+id/nature"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginEnd="10dp"
+                        android:text="Nature"
+                        android:textSize="22sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/medicine" />
+
+                    <TextView
+                        android:id="@+id/perception"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginEnd="10dp"
+                        android:text="Perception"
+                        android:textSize="22sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/nature" />
+
+                    <TextView
+                        android:id="@+id/performance"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginEnd="10dp"
+                        android:text="Performance"
+                        android:textSize="22sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/perception" />
+
+                    <TextView
+                        android:id="@+id/persuasion"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginEnd="10dp"
+                        android:text="Persuasion"
+                        android:textSize="22sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/performance" />
+
+                    <TextView
+                        android:id="@+id/religion"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginEnd="10dp"
+                        android:text="Religion"
+                        android:textSize="22sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/persuasion" />
+
+                    <TextView
+                        android:id="@+id/sleight_of_hand"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginEnd="10dp"
+                        android:text="Sleight of Hand"
+                        android:textSize="22sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/religion" />
+
+                    <TextView
+                        android:id="@+id/stealth"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginEnd="10dp"
+                        android:text="Stealth"
+                        android:textSize="22sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/sleight_of_hand" />
+
+                    <TextView
+                        android:id="@+id/survival"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginEnd="10dp"
+                        android:text="Survival"
+                        android:textSize="22sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/stealth" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
