--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -44,10 +44,10 @@
 
         <TextView
             android:id="@+id/Title"
-            android:layout_width="123dp"
-            android:layout_height="72dp"
+            android:layout_width="123sp"
+            android:layout_height="72sp"
             android:text="5e Manager"
-            android:textSize="25dp"
+            android:textSize="25sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -71,8 +71,8 @@
 
         <ImageButton
             android:id="@+id/main_menu_settings"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="80sp"
+            android:layout_height="80sp"
             android:layout_marginTop="4dp"
             android:contentDescription="setting buttons"
             android:scaleType="centerCrop"
@@ -82,8 +82,8 @@
 
         <ImageButton
             android:id="@+id/main_menu_help_page"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="80sp"
+            android:layout_height="80sp"
             android:contentDescription="help button"
             android:scaleType="centerCrop"
             android:src="@drawable/skillcheck"
