--- a/app/src/main/res/layout/character_view.xml
+++ b/app/src/main/res/layout/character_view.xml
@@ -8,12 +8,6 @@
     android:background="#8193B4"
     tools:context=".CharacterView">
 
-    <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrier"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:barrierDirection="top" />
-
     <TextView
         android:id="@+id/characterName"
         android:layout_width="wrap_content"
@@ -103,8 +97,9 @@
     <ScrollView
         style="@android:style/Widget.Material.ScrollView"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="0dp"
         android:layout_marginTop="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/characterLevel">
@@ -205,10 +200,10 @@
                         android:id="@+id/strength_card"
                         android:layout_width="70dp"
                         android:layout_height="60dp"
-                        android:layout_marginStart="80dp"
                         android:layout_marginTop="30dp"
+                        android:layout_marginEnd="20dp"
                         app:cardBackgroundColor="#5E92FF"
-                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/dexterity_card"
                         app:layout_constraintTop_toTopOf="parent">
 
                         <androidx.constraintlayout.widget.ConstraintLayout
@@ -273,7 +268,9 @@
                         android:layout_height="60dp"
                         android:layout_marginStart="170dp"
                         android:layout_marginTop="30dp"
+                        android:layout_marginEnd="170dp"
                         app:cardBackgroundColor="#5E92FF"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
 
@@ -336,10 +333,10 @@
                         android:id="@+id/constitution_card"
                         android:layout_width="70dp"
                         android:layout_height="60dp"
-                        android:layout_marginStart="260dp"
+                        android:layout_marginStart="20dp"
                         android:layout_marginTop="30dp"
                         app:cardBackgroundColor="#5E92FF"
-                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/dexterity_card"
                         app:layout_constraintTop_toTopOf="parent">
 
                         <androidx.constraintlayout.widget.ConstraintLayout
@@ -401,10 +398,10 @@
                         android:id="@+id/intelligence_card"
                         android:layout_width="70dp"
                         android:layout_height="60dp"
-                        android:layout_marginStart="80dp"
                         android:layout_marginTop="110dp"
+                        android:layout_marginEnd="20dp"
                         app:cardBackgroundColor="#5E92FF"
-                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/wisdom_card"
                         app:layout_constraintTop_toTopOf="parent">
 
                         <androidx.constraintlayout.widget.ConstraintLayout
@@ -468,7 +465,9 @@
                         android:layout_height="60dp"
                         android:layout_marginStart="170dp"
                         android:layout_marginTop="110dp"
+                        android:layout_marginEnd="170dp"
                         app:cardBackgroundColor="#5E92FF"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
 
@@ -532,10 +531,10 @@
                         android:id="@+id/charisma_card"
                         android:layout_width="70dp"
                         android:layout_height="60dp"
-                        android:layout_marginStart="260dp"
+                        android:layout_marginStart="20dp"
                         android:layout_marginTop="110dp"
                         app:cardBackgroundColor="#5E92FF"
-                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/wisdom_card"
                         app:layout_constraintTop_toTopOf="parent">
 
                         <androidx.constraintlayout.widget.ConstraintLayout
@@ -595,20 +594,6 @@
 
                     </androidx.cardview.widget.CardView>
 
-                    <Space
-                        android:id="@+id/character_view_spacer1"
-                        android:layout_width="75dp"
-                        android:layout_height="match_parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <Space
-                        android:id="@+id/character_view_spacer2"
-                        android:layout_width="75dp"
-                        android:layout_height="match_parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.cardview.widget.CardView>
@@ -623,6 +608,14 @@
                     android:id="@+id/skills_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
+
+                    <Space
+                        android:id="@+id/spacer"
+                        android:layout_width="1dp"
+                        android:layout_height="1dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
                         android:id="@+id/skills_text"
@@ -640,9 +633,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
+                        android:layout_marginEnd="10dp"
                         android:text="Acrobatics"
                         android:textSize="22sp"
-                        app:layout_constraintStart_toStartOf="@id/skills_text"
+                        app:layout_constraintEnd_toStartOf="@id/spacer"
                         app:layout_constraintTop_toBottomOf="@id/skills_text" />
 
                     <TextView
@@ -650,9 +644,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
+                        android:layout_marginEnd="10dp"
                         android:text="Animal Handling"
                         android:textSize="22sp"
-                        app:layout_constraintStart_toStartOf="@id/skills_text"
+                        app:layout_constraintEnd_toStartOf="@id/spacer"
                         app:layout_constraintTop_toBottomOf="@id/acrobatics" />
 
                     <TextView
@@ -660,9 +655,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
+                        android:layout_marginEnd="10dp"
                         android:text="Arcana"
                         android:textSize="22sp"
-                        app:layout_constraintStart_toStartOf="@id/skills_text"
+                        app:layout_constraintEnd_toStartOf="@id/spacer"
                         app:layout_constraintTop_toBottomOf="@id/animal_handling" />
 
                     <TextView
@@ -670,9 +666,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
+                        android:layout_marginEnd="10dp"
                         android:text="Athletics"
                         android:textSize="22sp"
-                        app:layout_constraintStart_toStartOf="@id/skills_text"
+                        app:layout_constraintEnd_toStartOf="@id/spacer"
                         app:layout_constraintTop_toBottomOf="@+id/arcana" />
 
                     <TextView
@@ -680,9 +677,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
+                        android:layout_marginEnd="10dp"
                         android:text="Deception"
                         android:textSize="22sp"
-                        app:layout_constraintStart_toStartOf="@id/skills_text"
+                        app:layout_constraintEnd_toStartOf="@id/spacer"
                         app:layout_constraintTop_toBottomOf="@+id/athletics" />
 
                     <TextView
@@ -690,9 +688,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
+                        android:layout_marginEnd="10dp"
                         android:text="History"
                         android:textSize="22sp"
-                        app:layout_constraintStart_toStartOf="@id/skills_text"
+                        app:layout_constraintEnd_toStartOf="@id/spacer"
                         app:layout_constraintTop_toBottomOf="@id/deception" />
 
                     <TextView
@@ -700,9 +699,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
+                        android:layout_marginEnd="10dp"
                         android:text="Insight"
                         android:textSize="22sp"
-                        app:layout_constraintStart_toStartOf="@id/skills_text"
+                        app:layout_constraintEnd_toStartOf="@id/spacer"
                         app:layout_constraintTop_toBottomOf="@id/history" />
 
                     <TextView
@@ -710,9 +710,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
+                        android:layout_marginEnd="10dp"
                         android:text="Intimidation"
                         android:textSize="22sp"
-                        app:layout_constraintStart_toStartOf="@id/skills_text"
+                        app:layout_constraintEnd_toStartOf="@id/spacer"
                         app:layout_constraintTop_toBottomOf="@id/insight" />
 
                     <TextView
@@ -720,108 +721,109 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
+                        android:layout_marginEnd="10dp"
                         android:text="Investigation"
                         android:textSize="22sp"
-                        app:layout_constraintStart_toStartOf="@id/skills_text"
+                        app:layout_constraintEnd_toStartOf="@id/spacer"
                         app:layout_constraintTop_toBottomOf="@id/intimidation" />
 
                     <TextView
                         android:id="@+id/medicine"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
                         android:layout_marginTop="5dp"
-                        android:layout_marginEnd="10dp"
                         android:text="Medicine"
                         android:textSize="22sp"
-                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/spacer"
                         app:layout_constraintTop_toBottomOf="@id/skills_text" />
 
                     <TextView
                         android:id="@+id/nature"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
                         android:layout_marginTop="5dp"
-                        android:layout_marginEnd="10dp"
                         android:text="Nature"
                         android:textSize="22sp"
-                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/spacer"
                         app:layout_constraintTop_toBottomOf="@id/medicine" />
 
                     <TextView
                         android:id="@+id/perception"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
                         android:layout_marginTop="5dp"
-                        android:layout_marginEnd="10dp"
                         android:text="Perception"
                         android:textSize="22sp"
-                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/spacer"
                         app:layout_constraintTop_toBottomOf="@id/nature" />
 
                     <TextView
                         android:id="@+id/performance"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
                         android:layout_marginTop="5dp"
-                        android:layout_marginEnd="10dp"
                         android:text="Performance"
                         android:textSize="22sp"
-                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/spacer"
                         app:layout_constraintTop_toBottomOf="@id/perception" />
 
                     <TextView
                         android:id="@+id/persuasion"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
                         android:layout_marginTop="5dp"
-                        android:layout_marginEnd="10dp"
                         android:text="Persuasion"
                         android:textSize="22sp"
-                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/spacer"
                         app:layout_constraintTop_toBottomOf="@id/performance" />
 
                     <TextView
                         android:id="@+id/religion"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
                         android:layout_marginTop="5dp"
-                        android:layout_marginEnd="10dp"
                         android:text="Religion"
                         android:textSize="22sp"
-                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/spacer"
                         app:layout_constraintTop_toBottomOf="@id/persuasion" />
 
                     <TextView
                         android:id="@+id/sleight_of_hand"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
                         android:layout_marginTop="5dp"
-                        android:layout_marginEnd="10dp"
                         android:text="Sleight of Hand"
                         android:textSize="22sp"
-                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/spacer"
                         app:layout_constraintTop_toBottomOf="@id/religion" />
 
                     <TextView
                         android:id="@+id/stealth"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
                         android:layout_marginTop="5dp"
-                        android:layout_marginEnd="10dp"
                         android:text="Stealth"
                         android:textSize="22sp"
-                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/spacer"
                         app:layout_constraintTop_toBottomOf="@id/sleight_of_hand" />
 
                     <TextView
                         android:id="@+id/survival"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
                         android:layout_marginTop="5dp"
-                        android:layout_marginEnd="10dp"
                         android:text="Survival"
                         android:textSize="22sp"
-                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/spacer"
                         app:layout_constraintTop_toBottomOf="@id/stealth" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
