im so awesome at coding 100%

--- a/app/src/main/res/layout/character_more_info.xml
+++ b/app/src/main/res/layout/character_more_info.xml
@@ -34,7 +34,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="5dp"
-        android:text="About:"
+        android:text="✏ About:"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +48,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="5dp"
-        android:text="Flaws:"
+        android:text="✏ Flaws:"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,7 +62,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="5dp"
-        android:text="Background:"
+        android:text="✏ Background:"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -76,7 +76,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="5dp"
-        android:text="Alignment:"
+        android:text="✏ Alignment:"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,7 +90,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="5dp"
-        android:text="Bonds:"
+        android:text="✏ Bonds:"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,7 +104,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="5dp"
-        android:text="Personality Traits:"
+        android:text="✏ Personality Traits:"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -119,7 +119,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="5dp"
-        android:text="Ideals:"
+        android:text="✏ Ideals:"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -269,16 +269,5 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/asi_wisdom" />
-
-    <TextView
-        android:id="@+id/about_pencil"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="✏"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@id/character_more_info_about"
-        app:layout_constraintTop_toTopOf="@id/character_more_info_about"
-        tools:layout_editor_absoluteX="65dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
