--- a/app/src/main/res/layout/character_view.xml
+++ b/app/src/main/res/layout/character_view.xml
@@ -607,7 +607,8 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/skills_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp">
 
                     <Space
                         android:id="@+id/spacer"
@@ -639,6 +640,15 @@
                         app:layout_constraintEnd_toStartOf="@id/spacer"
                         app:layout_constraintTop_toBottomOf="@id/skills_text" />
 
+                    <ImageView
+                        android:id="@+id/acrobatics_icon"
+                        android:layout_width="30dp"
+                        android:layout_height="0dp"
+                        android:src="@drawable/acrobatics"
+                        app:layout_constraintBottom_toBottomOf="@id/acrobatics"
+                        app:layout_constraintEnd_toStartOf="@id/acrobatics"
+                        app:layout_constraintTop_toTopOf="@id/acrobatics" />
+
                     <TextView
                         android:id="@+id/animal_handling"
                         android:layout_width="wrap_content"
@@ -649,6 +659,15 @@
                         android:textSize="22sp"
                         app:layout_constraintEnd_toStartOf="@id/spacer"
                         app:layout_constraintTop_toBottomOf="@id/acrobatics" />
+
+                    <ImageView
+                        android:id="@+id/animal_handling_icon"
+                        android:layout_width="30dp"
+                        android:layout_height="0dp"
+                        android:src="@drawable/animal_handling"
+                        app:layout_constraintBottom_toBottomOf="@id/animal_handling"
+                        app:layout_constraintEnd_toStartOf="@id/animal_handling"
+                        app:layout_constraintTop_toTopOf="@id/animal_handling" />
 
                     <TextView
                         android:id="@+id/arcana"
@@ -661,6 +680,15 @@
                         app:layout_constraintEnd_toStartOf="@id/spacer"
                         app:layout_constraintTop_toBottomOf="@id/animal_handling" />
 
+                    <ImageView
+                        android:id="@+id/arcana_icon"
+                        android:layout_width="30dp"
+                        android:layout_height="0dp"
+                        android:src="@drawable/arcana"
+                        app:layout_constraintBottom_toBottomOf="@id/arcana"
+                        app:layout_constraintEnd_toStartOf="@id/arcana"
+                        app:layout_constraintTop_toTopOf="@id/arcana" />
+
                     <TextView
                         android:id="@+id/athletics"
                         android:layout_width="wrap_content"
@@ -671,6 +699,15 @@
                         android:textSize="22sp"
                         app:layout_constraintEnd_toStartOf="@id/spacer"
                         app:layout_constraintTop_toBottomOf="@+id/arcana" />
+
+                    <ImageView
+                        android:id="@+id/athletics_icon"
+                        android:layout_width="30dp"
+                        android:layout_height="0dp"
+                        android:src="@drawable/athletics"
+                        app:layout_constraintBottom_toBottomOf="@id/athletics"
+                        app:layout_constraintEnd_toStartOf="@id/athletics"
+                        app:layout_constraintTop_toTopOf="@id/athletics" />
 
                     <TextView
                         android:id="@+id/deception"
@@ -683,6 +720,15 @@
                         app:layout_constraintEnd_toStartOf="@id/spacer"
                         app:layout_constraintTop_toBottomOf="@+id/athletics" />
 
+                    <ImageView
+                        android:id="@+id/deception_icon"
+                        android:layout_width="30dp"
+                        android:layout_height="0dp"
+                        android:src="@drawable/deception"
+                        app:layout_constraintBottom_toBottomOf="@id/deception"
+                        app:layout_constraintEnd_toStartOf="@id/deception"
+                        app:layout_constraintTop_toTopOf="@id/deception" />
+
                     <TextView
                         android:id="@+id/history"
                         android:layout_width="wrap_content"
@@ -693,6 +739,15 @@
                         android:textSize="22sp"
                         app:layout_constraintEnd_toStartOf="@id/spacer"
                         app:layout_constraintTop_toBottomOf="@id/deception" />
+
+                    <ImageView
+                        android:id="@+id/history_icon"
+                        android:layout_width="30dp"
+                        android:layout_height="0dp"
+                        android:src="@drawable/history"
+                        app:layout_constraintBottom_toBottomOf="@id/history"
+                        app:layout_constraintEnd_toStartOf="@id/history"
+                        app:layout_constraintTop_toTopOf="@id/history" />
 
                     <TextView
                         android:id="@+id/insight"
@@ -705,6 +760,15 @@
                         app:layout_constraintEnd_toStartOf="@id/spacer"
                         app:layout_constraintTop_toBottomOf="@id/history" />
 
+                    <ImageView
+                        android:id="@+id/insight_icon"
+                        android:layout_width="30dp"
+                        android:layout_height="0dp"
+                        android:src="@drawable/insight"
+                        app:layout_constraintBottom_toBottomOf="@id/insight"
+                        app:layout_constraintEnd_toStartOf="@id/insight"
+                        app:layout_constraintTop_toTopOf="@id/insight" />
+
                     <TextView
                         android:id="@+id/intimidation"
                         android:layout_width="wrap_content"
@@ -715,6 +779,15 @@
                         android:textSize="22sp"
                         app:layout_constraintEnd_toStartOf="@id/spacer"
                         app:layout_constraintTop_toBottomOf="@id/insight" />
+
+                    <ImageView
+                        android:id="@+id/intimidation_icon"
+                        android:layout_width="30dp"
+                        android:layout_height="0dp"
+                        android:src="@drawable/intimidation"
+                        app:layout_constraintBottom_toBottomOf="@id/intimidation"
+                        app:layout_constraintEnd_toStartOf="@id/intimidation"
+                        app:layout_constraintTop_toTopOf="@id/intimidation" />
 
                     <TextView
                         android:id="@+id/investigation"
@@ -727,104 +800,195 @@
                         app:layout_constraintEnd_toStartOf="@id/spacer"
                         app:layout_constraintTop_toBottomOf="@id/intimidation" />
 
+                    <ImageView
+                        android:id="@+id/investigation_icon"
+                        android:layout_width="30dp"
+                        android:layout_height="0dp"
+                        android:src="@drawable/insight"
+                        app:layout_constraintBottom_toBottomOf="@id/investigation"
+                        app:layout_constraintEnd_toStartOf="@id/investigation"
+                        app:layout_constraintTop_toTopOf="@id/investigation" />
+
                     <TextView
                         android:id="@+id/medicine"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
                         android:layout_marginTop="5dp"
                         android:text="Medicine"
                         android:textSize="22sp"
-                        app:layout_constraintStart_toEndOf="@id/spacer"
+                        app:layout_constraintStart_toEndOf="@id/medicine_icon"
                         app:layout_constraintTop_toBottomOf="@id/skills_text" />
+
+                    <ImageView
+                        android:id="@+id/medicine_icon"
+                        android:layout_width="30dp"
+                        android:layout_height="0dp"
+                        android:layout_marginStart="10dp"
+                        android:src="@drawable/medicine"
+                        app:layout_constraintBottom_toBottomOf="@id/medicine"
+                        app:layout_constraintStart_toEndOf="@id/spacer"
+                        app:layout_constraintTop_toTopOf="@id/medicine" />
 
                     <TextView
                         android:id="@+id/nature"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
                         android:layout_marginTop="5dp"
                         android:text="Nature"
                         android:textSize="22sp"
-                        app:layout_constraintStart_toEndOf="@id/spacer"
+                        app:layout_constraintStart_toEndOf="@id/nature_icon"
                         app:layout_constraintTop_toBottomOf="@id/medicine" />
+
+                    <ImageView
+                        android:id="@+id/nature_icon"
+                        android:layout_width="30dp"
+                        android:layout_height="0dp"
+                        android:layout_marginStart="10dp"
+                        android:src="@drawable/nature"
+                        app:layout_constraintBottom_toBottomOf="@id/nature"
+                        app:layout_constraintStart_toEndOf="@id/spacer"
+                        app:layout_constraintTop_toTopOf="@id/nature" />
 
                     <TextView
                         android:id="@+id/perception"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
                         android:layout_marginTop="5dp"
                         android:text="Perception"
                         android:textSize="22sp"
-                        app:layout_constraintStart_toEndOf="@id/spacer"
+                        app:layout_constraintStart_toEndOf="@id/perception_icon"
                         app:layout_constraintTop_toBottomOf="@id/nature" />
+
+                    <ImageView
+                        android:id="@+id/perception_icon"
+                        android:layout_width="30dp"
+                        android:layout_height="0dp"
+                        android:layout_marginStart="10dp"
+                        android:src="@drawable/perception"
+                        app:layout_constraintBottom_toBottomOf="@id/perception"
+                        app:layout_constraintStart_toEndOf="@id/spacer"
+                        app:layout_constraintTop_toTopOf="@id/perception" />
 
                     <TextView
                         android:id="@+id/performance"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
                         android:layout_marginTop="5dp"
                         android:text="Performance"
                         android:textSize="22sp"
-                        app:layout_constraintStart_toEndOf="@id/spacer"
+                        app:layout_constraintStart_toEndOf="@id/performance_icon"
                         app:layout_constraintTop_toBottomOf="@id/perception" />
+
+                    <ImageView
+                        android:id="@+id/performance_icon"
+                        android:layout_width="30dp"
+                        android:layout_height="0dp"
+                        android:layout_marginStart="10dp"
+                        android:src="@drawable/performance"
+                        app:layout_constraintBottom_toBottomOf="@id/performance"
+                        app:layout_constraintStart_toEndOf="@id/spacer"
+                        app:layout_constraintTop_toTopOf="@id/performance" />
 
                     <TextView
                         android:id="@+id/persuasion"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
                         android:layout_marginTop="5dp"
                         android:text="Persuasion"
                         android:textSize="22sp"
-                        app:layout_constraintStart_toEndOf="@id/spacer"
+                        app:layout_constraintStart_toEndOf="@id/persuasion_icon"
                         app:layout_constraintTop_toBottomOf="@id/performance" />
+
+                    <ImageView
+                        android:id="@+id/persuasion_icon"
+                        android:layout_width="30dp"
+                        android:layout_height="0dp"
+                        android:layout_marginStart="10dp"
+                        android:src="@drawable/persuasion"
+                        app:layout_constraintBottom_toBottomOf="@id/persuasion"
+                        app:layout_constraintStart_toEndOf="@id/spacer"
+                        app:layout_constraintTop_toTopOf="@id/persuasion" />
 
                     <TextView
                         android:id="@+id/religion"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
                         android:layout_marginTop="5dp"
                         android:text="Religion"
                         android:textSize="22sp"
-                        app:layout_constraintStart_toEndOf="@id/spacer"
+                        app:layout_constraintStart_toEndOf="@id/religion_icon"
                         app:layout_constraintTop_toBottomOf="@id/persuasion" />
+
+                    <ImageView
+                        android:id="@+id/religion_icon"
+                        android:layout_width="30dp"
+                        android:layout_height="0dp"
+                        android:layout_marginStart="10dp"
+                        android:src="@drawable/religion"
+                        app:layout_constraintBottom_toBottomOf="@id/religion"
+                        app:layout_constraintStart_toEndOf="@id/spacer"
+                        app:layout_constraintTop_toTopOf="@id/religion" />
 
                     <TextView
                         android:id="@+id/sleight_of_hand"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
                         android:layout_marginTop="5dp"
                         android:text="Sleight of Hand"
                         android:textSize="22sp"
-                        app:layout_constraintStart_toEndOf="@id/spacer"
+                        app:layout_constraintStart_toEndOf="@id/sleight_of_hand_icon"
                         app:layout_constraintTop_toBottomOf="@id/religion" />
+
+                    <ImageView
+                        android:id="@+id/sleight_of_hand_icon"
+                        android:layout_width="30dp"
+                        android:layout_height="0dp"
+                        android:layout_marginStart="10dp"
+                        android:src="@drawable/sleight_of_hand"
+                        app:layout_constraintBottom_toBottomOf="@id/sleight_of_hand"
+                        app:layout_constraintStart_toEndOf="@id/spacer"
+                        app:layout_constraintTop_toTopOf="@id/sleight_of_hand" />
 
                     <TextView
                         android:id="@+id/stealth"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
                         android:layout_marginTop="5dp"
                         android:text="Stealth"
                         android:textSize="22sp"
-                        app:layout_constraintStart_toEndOf="@id/spacer"
+                        app:layout_constraintStart_toEndOf="@id/stealth_icon"
                         app:layout_constraintTop_toBottomOf="@id/sleight_of_hand" />
+
+                    <ImageView
+                        android:id="@+id/stealth_icon"
+                        android:layout_width="30dp"
+                        android:layout_height="0dp"
+                        android:layout_marginStart="10dp"
+                        android:src="@drawable/stealth"
+                        app:layout_constraintBottom_toBottomOf="@id/stealth"
+                        app:layout_constraintStart_toEndOf="@id/spacer"
+                        app:layout_constraintTop_toTopOf="@id/stealth" />
 
                     <TextView
                         android:id="@+id/survival"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
                         android:layout_marginTop="5dp"
                         android:text="Survival"
                         android:textSize="22sp"
-                        app:layout_constraintStart_toEndOf="@id/spacer"
+                        app:layout_constraintStart_toEndOf="@id/survival_icon"
                         app:layout_constraintTop_toBottomOf="@id/stealth" />
+
+                    <ImageView
+                        android:id="@+id/survival_icon"
+                        android:layout_width="30dp"
+                        android:layout_height="0dp"
+                        android:layout_marginStart="10dp"
+                        android:src="@drawable/survival"
+                        app:layout_constraintBottom_toBottomOf="@id/survival"
+                        app:layout_constraintStart_toEndOf="@id/spacer"
+                        app:layout_constraintTop_toTopOf="@id/survival" />
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
